<resources>
    <string name="app_name">Metis: Wallpaper Stealer</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="main">Metis</string>
    <string name="how_to_use">How to Use</string>
    <string name="how_to_use_desc">You can get the wallpaper by pressing the button below.</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="copyright">ⓒ 2017 Astro. All rights reserved.</string>

    <string name="about">About</string>
    <string name="application_icon">Application Icon</string>
    <string name="application_desc">Android Wallpaper Stealer</string>
    <string name="developer">Developer</string>
    <string name="text_name">Name: Astro</string>
    <string name="text_email">Email: astr36@naver.com</string>
    <string name="text_web">Web: minedev.dothome.co.kr</string>
    <string name="license">License</string>
    <string name="license_text"><![CDATA[Metis\nCopyright (C) 2017 Astro\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.]]></string>

    <string name="settings">Settings</string>
    <string name="image_format">Image Format</string>
    <string name="jpeg">JPEG</string>
    <string name="png">PNG</string>
</resources>