<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context="me.astro.metis.SettingActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:text="@string/image_format"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <RadioGroup
                android:id="@+id/format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp">

                <RadioButton
                    android:id="@+id/jpeg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jpeg"/>

                <RadioButton
                    android:id="@+id/png"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/png"/>

            </RadioGroup>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:text="@string/developer"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/text_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:linksClickable="true"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/text_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
